fix(console): add spacing between localization hint and avatar notification (#8949)

--- a/packages/console/src/pages/SignInExperience/PageContent/components/ProfileFieldPartSubForm/index.module.scss
+++ b/packages/console/src/pages/SignInExperience/PageContent/components/ProfileFieldPartSubForm/index.module.scss
@@ -1,5 +1,9 @@
 @use '@/scss/underscore' as _;
 
+.avatarNotification {
+  margin-top: _.unit(6);
+}
+
 .dropdownTitleWrapper {
   display: flex;
   align-items: center;
